7월 29일 시험 준비

--- a/lesson/notesbooks/04-operator.ipynb
+++ b/lesson/notesbooks/04-operator.ipynb
@@ -274,7 +274,8 @@
     "\n",
     "```python\n",
     "vowels = 'aeiou'\n",
-    "\n",
+    "# 괄호 안은 빈문자열인지 아닌지만 판단=> 빈문자열이면 False, 문자열이 있으면 True.\n",
+    "# True일 경우 두 번째 값으로 vowels에 있는지 없는지 파악\n",
     "print(('a' and 'b') in vowels)  # False b가 괄호의 결과이므로 b in vowels가 됨 => False\n",
     "print(('b' and 'a') in vowels)  # True a가 괄호의 결과이므로 a in vowels가 됨 => True\n",
     "\n",
