--- a/lesson/notesbooks/02-data-types.ipynb
+++ b/lesson/notesbooks/02-data-types.ipynb
@@ -481,9 +481,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Debugging roaches 13 living room\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 4\n",
     "bugs = 'roaches'\n",
@@ -768,9 +776,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "(3, 'b')\n",
+      "(1, 'a', 3)\n",
+      "('b', 5)\n",
+      "(1, 3, 5)\n",
+      "(5, 'b', 3, 'a', 1)\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 1\n",
     "my_tuple = (1, 'a', 3, 'b', 5)\n",
@@ -1096,9 +1118,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 6, 9}\n",
+      "{1, 2}\n",
+      "{3}\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 2\n",
     "my_set_1 = {1, 2, 3}\n",
@@ -1164,9 +1196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 1\n",
     "variable = None\n",
@@ -1176,9 +1216,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 2\n",
     "bool_1 = True\n",
@@ -1260,7 +1311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
