--- a/lesson/notesbooks/03-type-conversion.ipynb
+++ b/lesson/notesbooks/03-type-conversion.ipynb
@@ -54,9 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0\n",
+      "4\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기\n",
     "print(3 + 5.0) \n",
@@ -108,20 +118,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1등\n",
+      "3.5\n",
+      "3\n",
+      "3.5\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기\n",
-    "print(int('1')) \n",
+    "print(int('1')) # 1\n",
     "\n",
-    "print(str(1) + '등') \n",
+    "print(str(1) + '등') # 1등\n",
     "\n",
-    "print(float('3.5'))\n",
+    "print(float('3.5')) # 3.5\n",
     "\n",
-    "print(int(3.5)) \n",
+    "print(int(3.5))  # 3\n",
     "\n",
-    "print(int('3.5'))"
+    "print(float('3.5')) # int는 안 되고 float으로 가능"
    ]
   },
   {
@@ -148,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
