--- a/lesson/notesbooks/09-data-structure.ipynb
+++ b/lesson/notesbooks/09-data-structure.ipynb
@@ -129,9 +129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 1\n",
     "print('hello'.capitalize()) \n",
@@ -256,9 +265,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "substring not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 실행 해보기 2\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbanana\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mindex(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m)) \n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbanana\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mz\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m) \n",
+      "\u001b[1;31mValueError\u001b[0m: substring not found"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 2\n",
     "print('banana'.index('a')) \n",
@@ -269,7 +297,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 3\n",
     "string1 = 'HELLO'\n",
@@ -284,7 +323,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 4\n",
     "string1 = 'Hello'\n",
@@ -360,16 +408,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "words = text.split(',')\n",
     "    print(words) # ['Hello', ' world!']\n",
@@ -441,7 +479,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Python!\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 1\n",
     "text = 'Hello, world!'\n",
@@ -453,7 +499,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 2\n",
     "text = '   Hello, world!   '\n",
@@ -465,7 +519,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello', ' world!']\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 3\n",
     "text = 'Hello, world!'\n",
@@ -477,7 +539,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello-world!\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 4\n",
     "words = ['Hello', 'world!']\n",
@@ -489,7 +559,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n",
+      "Hello, World!\n",
+      "HELLO, WORLD!\n",
+      "HEllO, WOrLD!\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 5\n",
     "text = 'heLLo, woRld!'\n",
@@ -508,7 +589,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HEzzO, WOrLD!\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 6\n",
     "text = 'heLLo, woRld!'\n",
@@ -653,7 +742,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 1\n",
     "my_list = [1, 2, 3]\n",
@@ -665,7 +762,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 2\n",
     "my_list = [1, 2, 3]\n",
@@ -677,7 +782,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 5, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 3\n",
     "my_list = [1, 2, 3]\n",
@@ -689,7 +802,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 4\n",
     "my_list = [1, 2, 3]\n",
@@ -701,7 +822,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1\n",
+      "[2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 5\n",
     "my_list = [1, 2, 3, 4, 5]\n",
@@ -718,7 +849,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 6\n",
     "my_list = [1, 2, 3]\n",
@@ -814,7 +953,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 1\n",
     "my_list = [1, 2, 3]\n",
@@ -826,7 +973,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 2\n",
     "my_list = [1, 2, 2, 3, 3, 3]\n",
@@ -838,7 +993,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 3\n",
     "my_list = [3, 2, 1]\n",
@@ -854,7 +1018,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 1, 8, 2, 3, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 4\n",
     "my_list = [1, 3, 2, 8, 1, 9]\n",
@@ -958,7 +1130,7 @@
     "    my_set = {1, 2, 3}\n",
     "    \n",
     "    my_set.discard(2)\n",
-    "    print(my_set)  # {1, 3, 'a', 'c', 'b’}\n",
+    "    print(my_set)  # {1, 3}\n",
     "    \n",
     "    my_set.discard(10)\n",
     "    ```"
@@ -1007,7 +1179,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b', 1, 2, 3, 4, 'a', 'c'}\n",
+      "{'b', 1, 2, 3, 4, 'a', 'c'}\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 1\n",
     "my_set = {'a', 'b', 'c', 1, 2, 3}\n",
@@ -1021,9 +1202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 2\n",
     "my_set = {'a', 'b', 'c', 1, 2, 3}\n",
@@ -1034,9 +1223,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b', 1, 3, 'a', 'c'}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "10",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m my_set\u001b[38;5;241m.\u001b[39mremove(\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_set) \n\u001b[1;32m----> 7\u001b[0m \u001b[43mmy_set\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_set) \n",
+      "\u001b[1;31mKeyError\u001b[0m: 10"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 3\n",
     "my_set = {'a', 'b', 'c', 1, 2, 3}\n",
@@ -1050,9 +1258,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3}\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 4\n",
     "my_set = {1, 2, 3}\n",
@@ -1065,9 +1281,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n",
+      "{1, 2, 3, 'a', 'c'}\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 5 \n",
     "my_set = {'a', 'b', 'c', 1, 2, 3}\n",
@@ -1080,9 +1305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'b', 1, 2, 3, 4, 'a', 5, 'c'}\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 6 \n",
     "my_set = {'a', 'b', 'c', 1, 2, 3}\n",
@@ -1347,9 +1580,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 1\n",
     "person = {'name': 'Alice', 'age': 25}\n",
@@ -1359,9 +1600,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice\n",
+      "None\n",
+      "Unknown\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 2\n",
     "person = {'name': 'Alice', 'age': 25}\n",
@@ -1373,9 +1624,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['name', 'age'])\n",
+      "name\n",
+      "age\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 3\n",
     "person = {'name': 'Alice', 'age': 25}\n",
@@ -1386,9 +1647,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['name', 'age'])\n",
+      "Alice\n",
+      "25\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 4\n",
     "person = {'name': 'Alice', 'age': 25}\n",
@@ -1399,9 +1670,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('name', 'Alice'), ('age', 25)])\n",
+      "name Alice\n",
+      "age 25\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 5\n",
     "person = {'name': 'Alice', 'age': 25}\n",
@@ -1413,9 +1694,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "{'name': 'Alice'}\n",
+      "None\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'country'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[37], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(person) \n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(person\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcountry\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)) \n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mperson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcountry\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m) \n",
+      "\u001b[1;31mKeyError\u001b[0m: 'country'"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 6\n",
     "person = {'name': 'Alice', 'age': 25}\n",
@@ -1428,9 +1730,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KOREA\n",
+      "{'name': 'Alice', 'age': 25, 'country': 'KOREA'}\n"
+     ]
+    }
+   ],
    "source": [
     "# 실행 해보기 7\n",
     "person = {'name': 'Alice', 'age': 25}\n",
@@ -1440,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
